syntax = "proto3";
package DecentralCardGame.cardchain.cardchain;

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/DecentralCardGame/Cardchain/x/cardchain/types";

message Set {
  string name = 1;
  repeated uint64 cards = 2;
  string artist = 3;
  string storyWriter = 4;
  repeated string contributors = 5;
  string story = 6;
  uint64 artworkId = 7;
  CStatus status = 8;
  int64 timeStamp = 9;
  ContributorDistribution contributorsDistribution = 10;
}

message OutpSet {
  string name = 1;
  repeated uint64 cards = 2;
  string artist = 3;
  string storyWriter = 4;
  repeated string contributors = 5;
  string story = 6;
  string artwork = 7;
  CStatus status = 8;
  int64 timeStamp = 9;
  ContributorDistribution contributorsDistribution = 10;
}

enum CStatus {
  design = 0;
  finalized = 1;
  active = 2;
  archived = 3;
}

message AddrWithQuantity {
 string addr = 1;
 uint32 q = 2;
}

message ContributorDistribution {
  cosmos.base.v1beta1.Coin payment = 1;
  repeated AddrWithQuantity contributors = 2;
}
